fix bottom spacing

--- a/css/theme/source/dev9.scss
+++ b/css/theme/source/dev9.scss
@@ -46,6 +46,8 @@ section.has-dark-background {
 section {
 	text-align: left;
 	height: 100%;
+	padding-top: 0 !important;
+    padding-bottom: 0 !important;
 	&:before {
 		display: block;
 	    position: absolute;
